# mitschreiber

./: .ai-context.yml  .editorconfig  .env.example  .gitignore  .hauski-reports  .yamllint  Cargo.toml  Justfile  README.md  push.err  pyproject.toml  renovate.json  sichter-reports
.github/workflows/: ai-context-guard.yml  ci.yml  contracts-validate.yml  heimgewebe-command-dispatch.yml  validate-intent.yml  validate.yml  wgx-guard.yml  wgx-reusable.yml  wgx-smoke.yml  wgx.yml
.wgx/: profile.example.yml  profile.yml
contracts/: os.context.text.embed.schema.json
crates/core/: Cargo.toml
crates/core/src/: lib.rs  main.rs
crates/core/tests/: metrics_smoke.rs
crates/mitschreiber-sampler/: Cargo.toml
crates/mitschreiber-sampler/src/: lib.rs  sampler.rs  x11.rs
docs/: architecture.md  ci.md  contracts.md  devcontainer.md  privacy.md  runbook.md
docs/adrs/: ADR-0001-toolchain-strategy.md
docs/contracts/: index.md  os-context.md
export/: os.intent.jsonl
fixtures/mitschreiber/: embed.demo.jsonl  state.demo.jsonl
heimgewebe-.ai-context.yml-sammlung/: chronik.ai-context.yml
merges/: mitschreiber_merge_2510262237__.github_workflows.md  mitschreiber_merge_2510262237__contracts.md  mitschreiber_merge_2510262237__crates_core_tests.md  mitschreiber_merge_2510262237__docs.md  mitschreiber_merge_2510262237__fixtures_mitschreiber.md  mitschreiber_merge_2510262237__index.md  mitschreiber_merge_2510262238__docs_adrs.md  mitschreiber_merge_2510262238__docs_contracts.md  mitschreiber_merge_2510262238__index.md  mitschreiber_merge_2510262238__merges.md  mitschreiber_merge_2510262238__root.md
mitschreiber/: __init__.py  __main__.py  cli.py  embed.py  embedding.py  paths.py  session.py  util.py
scripts/: wgx-metrics-snapshot.sh  wgx-smoke.sh
src/: lib.rs
tests/: test_cli.py
wgx/: wgx
wgx/lib/: parse_yaml.sh
