[package]
name = "mitschreiber"
version = "0.1.0"
edition = "2021"

[lib]
name = "mitschreiber"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0" }
mitschreiber-sampler = { path = "crates/mitschreiber-sampler" }

[features]
extension-module = ["pyo3/extension-module"]
default = []

[dev-dependencies]
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }

[workspace]
members = [
    "crates/core",
    "crates/mitschreiber-sampler",
]
resolver = "2"
