[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "mitschreiber"
version = "0.1.0"
description = "On-device context sensor for Heimgewebe ecosystem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
embed = ["sentence-transformers>=3.0.0"]

[project.scripts]
mitschreiber = "mitschreiber.cli:main"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "mitschreiber._mitschreiber"

[tool.uv]
dev-dependencies = ["pytest", "requests"]
