[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "mitschreiber"
version = "0.1.0"
description = "On-device context sampler & embedder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["psutil"]

[project.optional-dependencies]
embed = ["sentence-transformers>=2.6.1"]

[project.scripts]
mitschreiber = "mitschreiber.cli:main"

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "mitschreiber._mitschreiber"

[dependency-groups]
dev = ["pytest", "requests", "maturin"]
