[package]
name = "mitschreiber-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "mitschreiber_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
http = "0.2"
