[package]
name = "mitschreiber-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "mitschreiber_core"
# Standard 'rlib' allows this crate to be used as a dependency in other Rust crates (like the root 'cdylib').
# 'cdylib' is only for the final Python extension artifact.

[dependencies]
pyo3 = { version = "0.20.0" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
http = "0.2"

[features]
# 'extension-module' should NOT be enabled for helper crates that are linked into the main extension.
# It is only for the root 'cdylib'.
default = []
