[package]
name = "mitschreiber-sampler"
version = "0.1.0"
edition = "2021"

[lib]
name = "mitschreiber_sampler"
crate-type = ["rlib"]

[dependencies]
# Wichtig: Im rlib KEIN "extension-module", sonst knallt das Linken in Tests.
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
parking_lot = "0.12"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# optional X11 support; enable via feature "x11"
x11rb = { version = "0.11", optional = true }

[features]
default = []
x11 = ["x11rb"]

[dev-dependencies]
# für eventuelle doctests, gleiche pyo3-Config
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }
